--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -26,7 +26,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -36,12 +36,12 @@ body {
 .titulo-reserva,
 .titulo-empresa {
   font-family: "Kalam", cursive;
-  font-size: 30px;
+  font-size: 29px;
   @media screen and (max-width: 767px) {
-    font-size: 25px;
+    font-size: 24px;
   }
-  @media screen and (max-width: 450px) {
-    font-size: 18px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 19px;
   }
 }
 
@@ -52,7 +52,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 18px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -63,7 +63,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 13px;
   }
 }
@@ -74,14 +74,14 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 20px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 18px;
   }
 }
 
 .titulo-servicios {
-  @media screen and (max-width: 450px) {
-    font-size: 18px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 19px;
   }
 }
 
@@ -91,7 +91,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 20px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 18px;
   }
 }
@@ -101,7 +101,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -111,7 +111,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 18px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -122,12 +122,12 @@ body {
 
 .titulo-footer {
   font-family: "Kalam", cursive;
-  font-size: 30px;
+  font-size: 29px;
   @media screen and (max-width: 767px) {
     font-size: 22px;
   }
-  @media screen and (max-width: 450px) {
-    font-size: 18px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 19px;
   }
 }
 
@@ -137,7 +137,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -147,7 +147,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 30px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 20px;
   }
 }
@@ -157,7 +157,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 13px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 11px;
   }
 }
@@ -168,9 +168,9 @@ body {
   font-family: "Kalam", cursive;
   font-size: 30px;
   @media screen and (max-width: 767px) {
-    font-size: 25px;
+    font-size: 24px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 18px;
   }
 }
@@ -180,7 +180,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -200,7 +200,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -220,7 +220,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 12px;
   }
 }
@@ -229,22 +229,22 @@ body {
 
 .titulo_cotizacion {
   font-family: "Kalam", cursive;
-  font-size: 30px;
+  font-size: 29px;
   @media screen and (max-width: 767px) {
-    font-size: 25px;
+    font-size: 24px;
   }
-  @media screen and (max-width: 450px) {
-    font-size: 18px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 19px;
   }
 }
 
 .texto_cotizacion {
-  font-size: 19px;
+  font-size: 18px;
   @media screen and (max-width: 767px) {
     font-size: 17px;
   }
-  @media screen and (max-width: 450px) {
-    font-size: 17px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 16px;
   }
 }
 
@@ -254,28 +254,29 @@ body {
 .palabra_invitados {
   font-family: "Kalam", cursive;
   font-size: 16px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 15px;
   }
 }
 
 .opciones_evento {
-  font-size: 20px;
+  font-size: 22px;
   font-family: "Kalam", cursive;
   @media screen and (max-width: 767px) {
-    font-size: 18px;
+    font-size: 20px;
   }
-  @media screen and (max-width: 450px) {
-    font-size: 18px;
+ @media screen and (min-width:380px) and (max-width: 450px) {
+    font-size: 19px;
   }
 }
 
 .texto-turnos {
-  font-size: 16px;
+  font-family: "Kalam", cursive;
+  font-size: 17px;
   @media screen and (max-width: 767px) {
     font-size: 16px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -286,7 +287,7 @@ body {
 
 .servicios_salon {
   font-size: 16px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 15px;
   }
 }
@@ -314,7 +315,7 @@ body {
 .btn-volver {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 12px;
   }
 }
@@ -322,7 +323,7 @@ body {
 .boton_cotizar {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 12px;
   }
 }
@@ -330,7 +331,7 @@ body {
 .boton_reservar {
   font-family: "Kalam", cursive;
   font-size: 15px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 12px;
   }
 }
@@ -338,7 +339,7 @@ body {
 .result {
   font-family: "Kalam", cursive;
   font-size: 18px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -346,7 +347,7 @@ body {
 .result_reserva {
   font-family: "Kalam", cursive;
   font-size: 18px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 16px;
   }
 }
@@ -354,14 +355,14 @@ body {
 .texto_reserva {
   font-family: "Kalam", cursive;
   font-size: 20px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 17px;
   }
 }
 
 .formulario__input-error__tres {
   font-size: 13px;
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
   }
 }
 
@@ -369,11 +370,11 @@ body {
 
 .titulo_reservar {
   font-family: "Kalam", cursive;
-  font-size: 30px;
+  font-size: 29px;
   @media screen and (max-width: 767px) {
-    font-size: 25px;
+    font-size: 24px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 18px;
   }
 }
@@ -385,7 +386,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 16px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -396,7 +397,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -407,7 +408,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 15px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 14px;
   }
 }
@@ -427,7 +428,7 @@ body {
   @media screen and (max-width: 767px) {
     font-size: 14px;
   }
-  @media screen and (max-width: 450px) {
+ @media screen and (min-width:380px) and (max-width: 450px) {
     font-size: 12px;
   }
 }
